updates and fixes added refactoring